@@ -5,7 +5,7 @@
     <property name="projecthome" value="." />
 
 	<!-- verze jaru -->
-    <property name="version" value="1.0.2-SNAPSHOT" />
+    <property name="version" value="1.1.0-SNAPSHOT" />
 
 	<!-- symbolický název jaru -->
     <property name="jarname" value="${ant.project.name}" />
