@@ -1,6 +1,10 @@
 *********************************************************************************************
-*                                  CHANGE LOG 1.0.1 - > 1.0.2                               *
+*                                  CHANGE LOG 1.0.1 - > 1.1.0                               *
 *********************************************************************************************
+ * (4/11/2011) vsouhrada
+    # 221
+      
+      CHANGED: edited build.xml - changed version of JERPA to 1.1.0 - Prepared for switch to JUIGLE-2.0-RC1 
 
  * (4/11/2011) vsouhrada
     # 213
